--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -7,7 +7,7 @@
     &--nav
       width: 100%
 
-@media screen and (min-width: 1201px) and (max-width: 1680px)
+@media screen and (max-width: 1680px)
   .container
     width: 1200px
     &--nav
@@ -38,9 +38,10 @@
 
 /*  --- Large devices (desktops, 992px and up) --- */
 
-@media screen and (min-width: 992px) and (max-width: 1200px)
+@media screen and (max-width: 1200px)
   .container
     width: 900px
+    padding: 100px 10px 100px
     &--nav
       padding: 0 10px
     &--banner
@@ -48,6 +49,7 @@
 
   .nav
     line-height: 80px
+    top: 35px
     &-menu
       &__item
         font-weight: 400
@@ -55,14 +57,14 @@
         font-size: 12px
         padding: 0px 8px
     &-logo
-      top: 9%
+      top: -50%
 
   .btn
     &--nav
       font-size: 12px
-      padding: 10px 30px
+      padding: 5px 20px
     &--banner
-      font-size: 18px
+      font-size: 15px
       font-weight: 400
       margin-top: 5%
       padding: 23px 44px 23px 44px
@@ -76,21 +78,206 @@
         right: -10px
         left: -10px
         bottom: -10px
+    &--contact
+      padding: 23px 44px
+      font-size: 15px
+      font-weight: 400
+    &--about
+      padding: 23px 44px
+      font-size: 15px
+      font-weight: 400
 
   .banner
+    padding-top: 0
     &-head
-      font-size: 18px
+      font-size: 15px
     &-info
-      font-size: 56px
+      font-size: 40px
       line-height: 120%
       margin: 5% 0 5%
     &-descr
-      font-size: 18px
+      font-size: 15px
       font-weight: 300
       line-height: 30px
+  .text
+    padding: 5px 20px
+    line-height: 27px
+
+  .title
+    font-size: 30px
+    font-weight: 400
+    line-height: 42px
+    &--texted:before
+      font-size: 15px
+      font-weight: 400
+    &:after
+      width: 50px
+      height: 3px
+      margin: 25px auto
+  .about
+    &_img
+      width: 80%
+
+  .client
+    width: 80% !important
+    padding: 70px 60px 0px
+    &_photo
+      width: 100px
+      height: 100px
+      top: -14%
+
+  .quotes
+    left: -43%
+    &_img
+      width: 14%
+
+  .portfolio
+    &__item
+      width: 800px !important
+      height: 400px
+      &-info
+        padding: 34px 24px 10px
+        &_icon
+          width: 47px
+          height: 47px
+          padding-top: 6px
+          padding-left: 10px
+        &_heading
+          font-size: 18px
+          line-height: 16px
+          padding: 15px 0
+        &_text
+          padding: 5px 0px
+    &-slider__buttons
+      right: 38%
+
+  .skills
+    font-size: 10px
+
+  .form
+    &-control
+      height: 54px
+      &_texted
+        min-height: 100px
+        padding-top: 13px
+    &-field__icon
+      top: 20px
 
 /*  --- Medium devices (tablets, 768px and up) --- */
+@media screen and (max-width: 991px)
+  .container
+    width: 700px
+    &--banner
+      width: 550px
+    &--contact
+      padding: 0
+    //&--about
+    //  width: 700px
+    //&--services
+    //  width: 700px
+    //&--portfolio
+    //  width: 700px
 
+  .header
+    min-height: 575px
+
+  .nav
+    top: 0px
+    &-logo
+      top: 6px
+    &-toggle
+      display: inline-block
+      outline: none
+      margin-top: 28px
+      border: none
+      background-color: transparent
+      padding: 0
+      width: 37px
+      span
+        display: block
+        height: 3px
+        background: #fff
+        + span
+          margin-top: 8px
+    &-menu
+      position: absolute
+      display: none
+      min-width: 150px
+      padding: 10px 0
+      background: rgba(255, 255, 255, 0.2)
+      border-radius: 3px
+      &__item
+        display: block
+        line-height: 1.24
+      &__link
+        display: block
+        padding: 10px 20px
+        &:hover
+          font-size: 12px
+          border-radius: none
+          background-color: none
+
+  .btn
+    &--nav
+      &:hover
+        background-color: rgba(255, 255, 255, 0)
+        font-size: 12px
+    &--banner
+      font-size: 12px
+
+  .banner
+    &-head
+      width: 450px
+      font-size: 12px
+    &-info
+      font-size: 30px
+      line-height: 120%
+      margin: 5% 0 5%
+    &-descr
+      font-size: 12px
+      font-weight: 300
+      line-height: 20px
+
+  .client
+    margin-bottom: 50px
+    height: 310px
+    padding: 50px 40px 0px
+    &_photo
+      width: 70px
+      height: 70px
+      top: -12%
+
+  .quotes
+    top: 22px
+    left: -44%
+
+  .services
+    &__item
+      margin: 60px 20px
+
+  .portfolio
+    &__item
+      width: 600px !important
+      height: 300px
+      &-info
+        padding: 14px 24px 10px
+        &_text
+          padding: 15px 0px
+          font-size: 12px
+          line-height: 1.24
+        &-heading
+          font-size: 14px
+          line-height: 1.24
+          padding: 5px 0
+    &-slider
+      &__buttons
+        right: 35%
+        bottom: -5px
+
+  .text
+    &-client
+      padding: 5px 10px
+      line-height: 1.24
 
 
 /*  --- Small devices (landscape phones, 576px and up) --- */
