--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -476,6 +476,7 @@ input,textarea
             &_text
                 text-align: left
                 padding-bottom: 28px
+                padding-left: 0
             &_skills
                 display: block
                 float: left
