--- a/src/css/main.css
+++ b/src/css/main.css
@@ -17,15 +17,15 @@ body {
 input, textarea {
   outline: none; }
   input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
-    color: #fff; }
+    color: #fff !important; }
   input::-moz-placeholder, textarea::-moz-placeholder {
-    color: #fff; }
+    color: #fff !important; }
   input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-    color: #fff; }
+    color: #fff !important; }
   input::-ms-input-placeholder, textarea::-ms-input-placeholder {
-    color: #fff; }
+    color: #fff !important; }
   input::placeholder, textarea::placeholder {
-    color: #fff; }
+    color: #fff !important; }
 
 /* --- header --- */
 .header {
@@ -110,20 +110,20 @@ input, textarea {
   vertical-align: middle;
   text-align: center;
   padding-top: 100px; }
-  .banner-head {
+  .banner__head {
     opacity: 0.5;
     width: 650px;
     margin: 0 auto;
     color: #ffffff;
     font-size: 24px;
     text-transform: uppercase; }
-  .banner-info {
+  .banner__info {
     display: block;
     color: #ffffff;
     font-size: 76px;
     line-height: 120%;
     margin: 5% 0 5%; }
-  .banner-descr {
+  .banner__descr {
     display: block;
     color: #ffffff;
     font-size: 24px;
@@ -261,9 +261,6 @@ input, textarea {
 
 /* --- pulse button end --- */
 /* --- slick slider --- */
-.slick-list {
-  overflow: visible; }
-
 .slick-prev, .slick-next {
   display: inline-block;
   position: relative;
@@ -329,16 +326,20 @@ input, textarea {
   padding: 10px 30px;
   line-height: 32px;
   text-align: center; }
-  .text-services {
+  .text--services {
     width: 540px;
     margin: 0 auto;
     color: #fff;
     font-weight: 300; }
-  .text-portfolio {
+  .text--portfolio {
     width: 500px;
     margin: 0 auto; }
-  .text-client {
-    padding: 100px 30px; }
+  .text--portfolio-slider {
+    text-align: left;
+    padding: 20px 0 40px;
+    color: #606f85;
+    font-weight: 300;
+    line-height: 32px; }
 
 /* --- section about & about__client --- */
 .about {
@@ -346,12 +347,17 @@ input, textarea {
   background-image: -o-linear-gradient(120deg, #eff5fa 0%, #fff 80%, #fff 100%);
   background-image: linear-gradient(330deg, #eff5fa 0%, #fff 80%, #fff 100%);
   text-align: center; }
-  .about_img {
-    margin: 40px 0 10px; }
-  .about__client {
-    position: relative; }
   .about-slider__buttons {
     position: relative; }
+
+.about-client {
+  position: relative; }
+  .about-client__img {
+    margin: 40px 0 10px; }
+  .about-client__quotes {
+    position: absolute;
+    top: -100px;
+    left: -100px; }
 
 .client {
   display: inline-block;
@@ -365,10 +371,14 @@ input, textarea {
   background-color: #ffffff;
   position: relative;
   padding: 80px 80px 0; }
-  .client_info {
+  .client__info {
     padding-top: 39px;
     font-weight: 600; }
-  .client_photo {
+    .client__info-name {
+      color: #673fbf; }
+    .client__info-position {
+      color: #29384d; }
+  .client__photo {
     width: 128px;
     height: 128px;
     background-color: #74328e;
@@ -380,15 +390,6 @@ input, textarea {
     -webkit-transform: translateX(-50%);
         -ms-transform: translateX(-50%);
             transform: translateX(-50%); }
-  .client_info_name {
-    color: #673fbf; }
-  .client_info_position {
-    color: #29384d; }
-
-.quotes {
-  position: relative;
-  top: 35px;
-  left: -55%; }
 
 /* --- section services --- */
 .services {
@@ -396,105 +397,99 @@ input, textarea {
   background: -o-linear-gradient(75deg, #3c334c 25%, #383047 25%, #383047 63%, #3c334c 63%);
   background: linear-gradient(15deg, #3c334c 25%, #383047 25%, #383047 63%, #3c334c 63%);
   text-align: center; }
-  .services__item {
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 90px 30px;
-    width: 370px;
-    height: 332px;
-    -webkit-box-shadow: 0 11px 35px rgba(34, 34, 34, 0.44);
-            box-shadow: 0 11px 35px rgba(34, 34, 34, 0.44);
-    -webkit-border-radius: 5px;
-            border-radius: 5px;
-    background-color: #ffffff;
-    position: relative; }
-    .services__item_icon {
-      position: absolute;
-      top: -17%;
-      left: 30%;
-      -webkit-transform: translateX(-50%);
-          -ms-transform: translateX(-50%);
-              transform: translateX(-50%);
-      width: 109px;
-      height: 109px;
-      -webkit-border-radius: 50%;
-              border-radius: 50%;
-      background-color: #673fbf;
-      text-align: center;
-      padding-top: 38px; }
-    .services__item_heading {
-      padding: 87px 155px 0 41px;
-      color: #29384d;
-      font-size: 24px;
-      font-weight: 600;
-      line-height: 36px; }
-    .services__item_text {
-      padding: 20px 54px 40px 40px;
-      color: #606f85;
-      font-weight: 300;
-      line-height: 32px; }
+
+.services-item {
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 90px 30px;
+  width: 370px;
+  height: 332px;
+  -webkit-box-shadow: 0 11px 35px rgba(34, 34, 34, 0.44);
+          box-shadow: 0 11px 35px rgba(34, 34, 34, 0.44);
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  background-color: #ffffff;
+  position: relative; }
+  .services-item__icon-wrapper {
+    position: absolute;
+    top: -17%;
+    left: 30%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    width: 109px;
+    height: 109px;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    background-color: #673fbf;
+    text-align: center;
+    padding-top: 38px; }
+  .services-item__heading {
+    padding: 87px 155px 0 41px;
+    color: #29384d;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px; }
 
 /* --- section portfolio --- */
 .portfolio {
   background: -webkit-linear-gradient(60deg, #eff5fa 0%, #fff 80%, #fff 100%);
   background: -o-linear-gradient(60deg, #eff5fa 0%, #fff 80%, #fff 100%);
   background: linear-gradient(30deg, #eff5fa 0%, #fff 80%, #fff 100%); }
-  .portfolio-box {
-    position: relative;
-    margin-top: 40px; }
-  .portfolio__item {
-    display: block !important;
-    text-align: left;
-    margin: 0 auto;
-    overflow: hidden;
-    width: 1170px !important;
-    height: 587px;
-    -webkit-box-shadow: 0 25px 35px rgba(34, 34, 34, 0.11);
-            box-shadow: 0 25px 35px rgba(34, 34, 34, 0.11);
-    -webkit-border-radius: 5px;
-            border-radius: 5px;
-    background-color: #ffffff;
-    vertical-align: top; }
-    .portfolio__item-info {
-      display: inline-block;
-      width: 50%;
-      vertical-align: top;
-      padding: 64px 44px 10px; }
-      .portfolio__item-info_icon {
-        width: 77px;
-        height: 77px;
-        background-color: #188afd;
-        -webkit-border-radius: 50%;
-                border-radius: 50%;
-        padding-top: 20px;
-        padding-left: 24px; }
-      .portfolio__item-info_heading {
-        color: #29384d;
-        font-size: 24px;
-        font-weight: 600;
-        line-height: 36px;
-        padding: 30px 0; }
-      .portfolio__item-info_text {
-        text-align: left;
-        padding-bottom: 28px;
-        padding-left: 0; }
-      .portfolio__item-info_skills {
-        display: block;
-        float: left;
-        color: #29384d; }
-    .portfolio__item-img {
-      display: inline-block;
-      float: left;
-      width: 50%;
-      overflow: hidden; }
 
-.portfolio-slider__buttons {
-  position: absolute;
-  bottom: 20px;
-  right: 42.8%; }
-  .portfolio-slider__buttons .slick-prev, .portfolio-slider__buttons .slick-next {
-    margin: 0 5px; }
+.portfolio-slider-wrapper {
+  position: relative;
+  margin-top: 40px; }
+
+.portfolio-slider-item {
+  display: block !important;
+  text-align: left;
+  margin: 0 auto;
+  overflow: hidden;
+  width: 1170px !important;
+  height: 587px;
+  -webkit-box-shadow: 0 25px 35px rgba(34, 34, 34, 0.11);
+          box-shadow: 0 25px 35px rgba(34, 34, 34, 0.11);
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
+  background-color: #ffffff;
+  vertical-align: top; }
+  .portfolio-slider-item__info {
+    display: inline-block;
+    width: 50%;
+    vertical-align: top;
+    padding: 64px 44px 10px; }
+  .portfolio-slider-item__icon {
+    width: 77px;
+    height: 77px;
+    background-color: #188afd;
+    -webkit-border-radius: 50%;
+            border-radius: 50%;
+    padding-top: 20px;
+    padding-left: 24px; }
+  .portfolio-slider-item__heading {
+    color: #29384d;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 36px;
+    padding: 30px 0; }
+  .portfolio-slider-item__text {
+    text-align: left;
+    padding-bottom: 28px;
+    padding-left: 0; }
+  .portfolio-slider-item__skills {
+    display: block;
+    float: left;
+    color: #29384d; }
+  .portfolio-slider-item__img {
+    display: inline-block;
+    float: left;
+    width: 50%;
+    overflow: hidden; }
+
+.portfolio-slider-buttons .slick-prev, .portfolio-slider-buttons .slick-next {
+  margin: 0 5px; }
 
 .skills {
   float: left;
@@ -529,24 +524,33 @@ input, textarea {
   position: relative;
   margin: 20px;
   outline: none; }
-  .form-field__icon {
+  .form-field__label {
     position: absolute;
     top: 24px;
     left: 20px; }
-
-.form-control {
-  width: 100%;
-  height: 64px;
-  padding: 11px 30px 10px 50px;
-  color: #ffffff;
-  font-family: "Poppins";
-  font-size: 17px;
-  font-weight: 300;
-  -webkit-border-radius: 5px;
-          border-radius: 5px;
-  border: 2px solid rgba(255, 255, 255, 0.25);
-  background-color: transparent; }
-  .form-control_texted {
-    min-height: 125px;
-    padding-top: 17px;
-    resize: none; }
+  .form-field__input {
+    width: 100%;
+    height: 64px;
+    padding: 11px 30px 10px 50px;
+    color: #ffffff;
+    font-family: "Poppins", sans-serif;
+    font-size: 17px;
+    font-weight: 300;
+    -webkit-border-radius: 5px;
+            border-radius: 5px;
+    border: 2px solid rgba(255, 255, 255, 0.25);
+    background-color: transparent; }
+    .form-field__input--textarea {
+      min-height: 125px;
+      padding-top: 17px;
+      resize: none; }
+      .form-field__input--textarea::-webkit-input-placeholder {
+        color: red; }
+      .form-field__input--textarea::-moz-placeholder {
+        color: red; }
+      .form-field__input--textarea:-ms-input-placeholder {
+        color: red; }
+      .form-field__input--textarea::-ms-input-placeholder {
+        color: red; }
+      .form-field__input--textarea::placeholder {
+        color: red; }
