--- a/src/sass/media.sass
+++ b/src/sass/media.sass
@@ -3,325 +3,325 @@
 /*  --- Extra large devices (large desktops, 1200px and up) --- */
 
 @media screen and (min-width: 1681px)
-  .container
-    &--nav
-      width: 100%
+    .container
+        &--nav
+            width: 100%
 
 @media screen and (max-width: 1680px)
-  .container
-    width: 1200px
-    &--nav
-      padding: 0 30px
+    .container
+        width: 1200px
+        &--nav
+            padding: 0 30px
 
-  .nav-menu
-    &__item
-      font-weight: 400
-    &__link
-      padding: 0 6px
+    .nav-menu
+        &__item
+            font-weight: 400
+        &__link
+            padding: 0 6px
 
-  .btn--nav
-    padding: 18px 35px
+    .btn--nav
+        padding: 18px 35px
 
-  .banner
-    &-head
-      font-size: 22px
-    &-info
-      font-size: 73px
-    &-descr
-      font-size: 22px
-  .text
-    //padding: 5px 20px
-    line-height: 27px
-    &-client
-      padding: 60px 30px
-  .client
-    &-info
-      padding-top: 0
+    .banner
+        &-head
+            font-size: 22px
+        &-info
+            font-size: 73px
+        &-descr
+            font-size: 22px
+    .text
+        //padding: 5px 20px
+        line-height: 27px
+        &-client
+            padding: 60px 30px
+    .client
+        &-info
+            padding-top: 0
 
-  .portfolio-slider__buttons
-    right: 39%
+    .portfolio-slider__buttons
+        right: 39%
 
 /*  --- Large devices (desktops, 992px and up) --- */
 
 @media screen and (max-width: 1200px)
-  .container
-    width: 900px
-    padding: 100px 10px 100px
-    &--nav
-      padding: 0 10px
-    &--banner
-      padding: 5% 20px
+    .container
+        width: 900px
+        padding: 100px 10px 100px
+        &--nav
+            padding: 0 10px
+        &--banner
+            padding: 5% 20px
 
-  .nav
-    line-height: 80px
-    top: 35px
-    &-menu
-      &__item
+    .nav
+        line-height: 80px
+        top: 35px
+        &-menu
+            &__item
+                font-weight: 400
+            &__link
+                font-size: 12px
+                padding: 0px 8px
+        &-logo
+            top: -50%
+
+    .btn
+        &--nav
+            font-size: 12px
+            padding: 5px 20px
+        &--banner
+            font-size: 15px
+            font-weight: 400
+            margin-top: 5%
+            padding: 23px 44px 23px 44px
+            &:after
+                top: -10px
+                right: -10px
+                left: -10px
+                bottom: -10px
+            &:before
+                top: -10px
+                right: -10px
+                left: -10px
+                bottom: -10px
+        &--contact
+            padding: 23px 44px
+            font-size: 15px
+            font-weight: 400
+        &--about
+            padding: 23px 44px
+            font-size: 15px
+            font-weight: 400
+
+    .banner
+        padding-top: 0
+        &-head
+            font-size: 15px
+        &-info
+            font-size: 40px
+            line-height: 120%
+            margin: 5% 0 5%
+        &-descr
+            font-size: 15px
+            font-weight: 300
+            line-height: 30px
+    .text
+        padding: 5px 20px
+        line-height: 27px
+        &-client
+            padding: 60px 30px
+
+    .title
+        font-size: 30px
         font-weight: 400
-      &__link
-        font-size: 12px
-        padding: 0px 8px
-    &-logo
-      top: -50%
+        line-height: 42px
+        &--texted:before
+            font-size: 15px
+            font-weight: 400
+        &:after
+            width: 50px
+            height: 3px
+            margin: 25px auto
+    .about
+        &_img
+            width: 80%
 
-  .btn
-    &--nav
-      font-size: 12px
-      padding: 5px 20px
-    &--banner
-      font-size: 15px
-      font-weight: 400
-      margin-top: 5%
-      padding: 23px 44px 23px 44px
-      &:after
-        top: -10px
-        right: -10px
-        left: -10px
-        bottom: -10px
-      &:before
-        top: -10px
-        right: -10px
-        left: -10px
-        bottom: -10px
-    &--contact
-      padding: 23px 44px
-      font-size: 15px
-      font-weight: 400
-    &--about
-      padding: 23px 44px
-      font-size: 15px
-      font-weight: 400
+    .client
+        width: 80% !important
+        padding: 70px 60px 0px
+        &_photo
+            width: 100px
+            height: 100px
+            top: -14%
 
-  .banner
-    padding-top: 0
-    &-head
-      font-size: 15px
-    &-info
-      font-size: 40px
-      line-height: 120%
-      margin: 5% 0 5%
-    &-descr
-      font-size: 15px
-      font-weight: 300
-      line-height: 30px
-  .text
-    padding: 5px 20px
-    line-height: 27px
-    &-client
-      padding: 60px 30px
+    .quotes
+        left: -43%
+        &_img
+            width: 14%
 
-  .title
-    font-size: 30px
-    font-weight: 400
-    line-height: 42px
-    &--texted:before
-      font-size: 15px
-      font-weight: 400
-    &:after
-      width: 50px
-      height: 3px
-      margin: 25px auto
-  .about
-    &_img
-      width: 80%
+    .portfolio
+        &__item
+            width: 800px !important
+            height: 400px
+            &-info
+                padding: 34px 24px 10px
+                &_icon
+                    width: 47px
+                    height: 47px
+                    padding-top: 6px
+                    padding-left: 10px
+                &_heading
+                    font-size: 18px
+                    line-height: 16px
+                    padding: 15px 0
+                &_text
+                    padding: 5px 0px
+        &-slider__buttons
+            right: 38%
 
-  .client
-    width: 80% !important
-    padding: 70px 60px 0px
-    &_photo
-      width: 100px
-      height: 100px
-      top: -14%
+    .skills
+        font-size: 10px
 
-  .quotes
-    left: -43%
-    &_img
-      width: 14%
-
-  .portfolio
-    &__item
-      width: 800px !important
-      height: 400px
-      &-info
-        padding: 34px 24px 10px
-        &_icon
-          width: 47px
-          height: 47px
-          padding-top: 6px
-          padding-left: 10px
-        &_heading
-          font-size: 18px
-          line-height: 16px
-          padding: 15px 0
-        &_text
-          padding: 5px 0px
-    &-slider__buttons
-      right: 38%
-
-  .skills
-    font-size: 10px
-
-  .form
-    &-control
-      height: 54px
-      &_texted
-        min-height: 100px
-        padding-top: 13px
-    &-field__icon
-      top: 20px
+    .form
+        &-control
+            height: 54px
+            &_texted
+                min-height: 100px
+                padding-top: 13px
+        &-field__icon
+            top: 20px
 
 /*  --- Medium devices (tablets, 768px and up) --- */
 @media screen and (max-width: 991px)
-  .container
-    width: 700px
-    &--banner
-      width: 550px
-    &--contact
-      padding: 0
+    .container
+        width: 700px
+        &--banner
+            width: 550px
+        &--contact
+            padding: 0
 
-  .header
-    min-height: 575px
+    .header
+        min-height: 575px
 
-  .nav
-    top: 0px
-    &-logo
-      top: 6px
-    &-toggle
-      display: inline-block
-      outline: none
-      margin-top: 28px
-      border: none
-      background-color: transparent
-      padding: 0
-      width: 37px
-      span
-        display: block
-        height: 3px
-        background: #fff
-        + span
-          margin-top: 8px
-    &-menu
-      position: absolute
-      display: none
-      min-width: 150px
-      padding: 10px 0
-      background: rgba(255, 255, 255, 0.2)
-      border-radius: 3px
-      &__item
-        display: block
-        line-height: 1.24
-      &__link
-        display: block
-        padding: 10px 20px
-        &:hover
-          font-size: 12px
-          border-radius: none
-          background-color: none
+    .nav
+        top: 0px
+        &-logo
+            top: 6px
+        &-toggle
+            display: inline-block
+            outline: none
+            margin-top: 28px
+            border: none
+            background-color: transparent
+            padding: 0
+            width: 37px
+            span
+                display: block
+                height: 3px
+                background: #fff
+                + span
+                    margin-top: 8px
+        &-menu
+            position: absolute
+            display: none
+            min-width: 150px
+            padding: 10px 0
+            background: rgba(255, 255, 255, 0.2)
+            border-radius: 3px
+            &__item
+                display: block
+                line-height: 1.24
+            &__link
+                display: block
+                padding: 10px 20px
+                &:hover
+                    font-size: 12px
+                    border-radius: none
+                    background-color: none
 
-  .btn
-    &--nav
-      &:hover
-        background-color: rgba(255, 255, 255, 0)
-        font-size: 12px
-    &--banner
-      font-size: 12px
+    .btn
+        &--nav
+            &:hover
+                background-color: rgba(255, 255, 255, 0)
+                font-size: 12px
+        &--banner
+            font-size: 12px
 
-  .banner
-    &-head
-      width: 450px
-      font-size: 12px
-    &-info
-      font-size: 30px
-      line-height: 120%
-      margin: 5% 0 5%
-    &-descr
-      font-size: 12px
-      font-weight: 300
-      line-height: 20px
+    .banner
+        &-head
+            width: 450px
+            font-size: 12px
+        &-info
+            font-size: 30px
+            line-height: 120%
+            margin: 5% 0 5%
+        &-descr
+            font-size: 12px
+            font-weight: 300
+            line-height: 20px
 
-  .client
-    margin-bottom: 50px
-    height: 310px
-    padding: 50px 40px 0px
-    &_photo
-      width: 70px
-      height: 70px
-      top: -12%
+    .client
+        margin-bottom: 50px
+        height: 310px
+        padding: 50px 40px 0px
+        &_photo
+            width: 70px
+            height: 70px
+            top: -12%
 
-  .quotes
-    top: 22px
-    left: -44%
+    .quotes
+        top: 22px
+        left: -44%
 
-  .services
-    &__item
-      margin: 60px 20px
+    .services
+        &__item
+            margin: 60px 20px
 
-  .portfolio
-    &__item
-      width: 600px !important
-      height: 300px
-      &-info
-        padding: 14px 24px 10px
-        &_text
-          padding: 15px 0px
-          font-size: 12px
-          line-height: 1.24
-        &-heading
-          font-size: 14px
-          line-height: 1.24
-          padding: 5px 0
-    &-slider
-      &__buttons
-        right: 35%
-        bottom: -5px
+    .portfolio
+        &__item
+            width: 600px !important
+            height: 300px
+            &-info
+                padding: 14px 24px 10px
+                &_text
+                    padding: 15px 0px
+                    font-size: 12px
+                    line-height: 1.24
+                &-heading
+                    font-size: 14px
+                    line-height: 1.24
+                    padding: 5px 0
+        &-slider
+            &__buttons
+                right: 35%
+                bottom: -5px
 
-  .text
-    &-client
-      padding: 5px 10px
-      line-height: 1.24
-
+    .text
+        &-client
+            padding: 5px 10px
+            line-height: 1.24
 
 /*  --- Small devices (landscape phones, 576px and up) --- */
 
 @media screen and (max-width: 576px)
-  .container
-    width: 550px
+    .container
+        width: 90%
+        //width: 550px
 
-  .btn--nav
-    padding: 5px 10px
+    .btn--nav
+        padding: 5px 10px
 
-  .client
-    padding: 35px 20px 0px
-    &_info
-      padding-top: 20px
+    .client
+        padding: 35px 20px 0px
+        &_info
+            padding-top: 20px
 
-  .text
-    &-client
-      padding: 5px 10px
-    &-services
-      width: 100%
+    .text
+        &-client
+            padding: 5px 10px
+        &-services
+            width: 100%
 
-  .quotes
-    top: 22px
-    left: -44%
+    .quotes
+        top: 22px
+        left: -44%
 
-  .portfolio
-    &__item
-      width: 450px !important
-      height: 250px
-      &-info
-        &_icon
-          display: none
-        &_heading
-          font-size: 15px
-          line-height: 1.24
-          padding: 5px 0
-        &_text
-          padding: 5px 0px
-    &-slider
-      &__buttons
-        right: 31%
-        bottom: -15px
+    .portfolio
+        &__item
+            width: 450px !important
+            height: 250px
+            &-info
+                &_icon
+                    display: none
+                &_heading
+                    font-size: 15px
+                    line-height: 1.24
+                    padding: 5px 0
+                &_text
+                    padding: 5px 0px
+        &-slider
+            &__buttons
+                right: 31%
+                bottom: -15px
 
-  .skills
-    padding: 5px
+    .skills
+        padding: 5px
